# tls-reputation-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
tests/: test_classify.py  test_fingerprint.py
tlsrep/: __init__.py  config.py  main.py
tlsrep/adapters/: __init__.py
tlsrep/adapters/catalog/: json_source.py  known_fingerprints.json
tlsrep/adapters/http/: routers.py  schemas.py
tlsrep/adapters/persistence/: postgres.py  schema.sql
tlsrep/application/: __init__.py  ports.py  responses.py  use_cases.py
tlsrep/domain/: __init__.py  catalog.py  models.py  reputation.py
tlsrep/domain/fingerprinting/: __init__.py  clienthello.py  ja3.py  ja4.py  names.py
